# portal

./: .dockerignore  .env.example  .env.test.example  .gitignore  ARCHITECTURE.md  Caddyfile  Makefile  README.md  compose.test.yaml  docker-compose.yml  hanko-config.yaml  hanko-config.yaml.example  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_oam_images_table.py  002_add_map_projects_table.py  003_add_map_project_sync_state.py  004_add_plans_tables.py  005_add_plan_is_public.py  006_add_plan_images.py  007_add_plan_project_status.py  007_add_project_exists_to_plan_projects.py  007_add_tasks_table.py  008_add_plan_project_display_order.py  009_fix_dronetm_project_id_prefix.py  010_add_project_exists_to_plan_projects.py  011_convert_empty_slots_to_tasks.py  012_add_plan_project_featured.py  013_add_plan_scope_visibility.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: example.py  groups.py  tasks.py  test.py
backend/app/api/routes/chatmap/: chatmap.py
backend/app/api/routes/drone_tasking_manager/: drone_tasking_manager.py
backend/app/api/routes/drone_tm/: drone_tm.py
backend/app/api/routes/export_tool/: export_tool.py
backend/app/api/routes/fair/: fair.py
backend/app/api/routes/field_tm/: field_tm.py
backend/app/api/routes/homepage_map/: homepage_map.py
backend/app/api/routes/map/: drone_tasking_manager.py  export_tool.py  fair.py  field_tm.py  open_aerial_map.py  resources.py  tasking_manager.py  umap.py
backend/app/api/routes/open_aerial_map/: open_aerial_map.py
backend/app/api/routes/plans/: images.py  plans.py
backend/app/api/routes/shared/: drone_tm_helpers.py  fair_helpers.py  umap_helpers.py
backend/app/api/routes/tasking_manager/: tasking_manager.py
backend/app/api/routes/umap/: umap.py
backend/app/api/routes/user/: chatmap.py  drone_tasking_manager.py  export_tool.py  fair.py  open_aerial_map.py  umap.py
backend/app/core/: base.py  cache.py  config.py  database.py
backend/app/db/models/: oam.py  plan.py  task.py
backend/app/models/: drone_tasking_manager.py  export_tool.py  fair.py  field_tm.py  homepage_map.py  open_aerial_map.py  plan.py  task.py  tasking_manager.py  umap.py
backend/app/schemas/: auth.py  health.py
backend/app/services/: __init__.py  chatmap_service.py  drone_tm_service.py  exceptions.py  export_tool_service.py  fair_service.py  field_tm_service.py  login_service.py  map_projects_service.py  oam_service.py  open_aerial_map_service.py  permissions.py  plans_service.py  s3_service.py  tasking_manager_service.py  tasks_service.py  umap_service.py  url_resolver.py
backend/app/tests/: conftest.py  test_login_service.py  test_main_scheduler.py  test_optimizations.py  test_permissions_unit.py  test_plan_permissions.py  test_plans.py  test_resolve_project_url.py  test_url_resolver.py
backend/app/tests/api/: test_example.py
backend/app/tests/api/chatmap/: test_chatmap.py
backend/app/tests/api/drone_tasking_manager/: test_drone_tasking_manager.py
backend/app/tests/api/drone_tm/: test_drone_tm.py
backend/app/tests/api/export_tool/: test_export_tool.py
backend/app/tests/api/fair/: test_fair.py
backend/app/tests/api/field_tm/: test_field_tm.py
backend/app/tests/api/homepage_map/: __init__.py  test_homepage_map.py  test_homepage_map_sync.py
backend/app/tests/api/map/: test_drone_tasking_manager.py  test_export_tool.py  test_fair.py  test_field_tm.py  test_homepage_map_sync.py  test_open_aerial_map.py  test_tasking_manager.py  test_umap.py
backend/app/tests/api/open_aerial_map/: test_open_aerial_map.py  test_open_aerial_map_service.py
backend/app/tests/api/tasking_manager/: test_tasking_manager.py
backend/auth-libs/: README.md
frontend/auth-libs/python/: README.md  pyproject.toml
frontend/auth-libs/python/tests/: test_django_integration.py  test_fastapi_integration.py  test_osm_oauth.py
(+280 files in other folders)
